# honestlaunch

./: .gitignore  CNAME  DEMO_EXTENSION_PLAN.md  EVIDENCE_CONTRAST_EXECUTION_PLAN.md  LICENSE  OUTSTANDING_WORK.md  README.md  RUNTIME.md  pyproject.toml
cappincheck/: audit.py  claims.py  cli.py  contrast.py  gemini.py  numeric.py  report.py  schemas.py
claimlens/: __init__.py  audit.py  claims.py  cli.py  gemini.py  ingest.py  report.py  schemas.py
examples/: anthropic_opus_48_report.html  anthropic_opus_48_report.json  anthropic_opus_48_report.md  anthropic_sonnet_45_report.html  anthropic_sonnet_45_report.json  anthropic_sonnet_45_report.md  archive_manifest.json  careful_document.md  careful_report.html  careful_report.json  careful_report.md  contrast_demo.html  contrast_demo.json  contrast_demo.md  demo_document.md  demo_report.html  demo_report.json  demo_report.md  gemini_35_flash_report.html  gemini_35_flash_report.json  gemini_35_flash_report.md  index.html  live_report.html  live_report.json  live_report.md  managed_report.html  managed_report.json  managed_report.md  needs_receipts_document.md  needs_receipts_report.html  needs_receipts_report.json  needs_receipts_report.md  openai_gpt4o_report.html  openai_gpt4o_report.json  openai_gpt4o_report.md  overstated_report.html  overstated_report.json  overstated_report.md  real_public_example.md  xai_grok3_report.html  (+2 more)
honestlaunch/: __init__.py  anchor_map.py  archive_quality.py  archive_registry.py  audit.py  canonical_hardening.py  citations.py  claims.py  cli.py  contrast.py  gemini.py  ingest.py  report.py  (+4 more)
(+23 files in other folders)
