[project]
name = "claimlens"
version = "0.1.0"
description = "Grounded adversarial claim audit for dense expert documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ClaimLens contributors" }]
dependencies = [
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pypdf>=4.2.0",
  "typer>=0.12.0",
]

[project.scripts]
claimlens = "claimlens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

